--- a/backend_database/readme
+++ b/backend_database/readme
@@ -30,3 +30,6 @@ CREATE TABLE posts (
   user_id INTEGER,
   FOREIGN KEY (user_id) REFERENCES users(id)  -- 👈 RELATIONSHIP!
 );
+
+to override env variables:
+NODE_ENV=development PORT=3001 npm run dev
