feat(tests): add authentication tests and configure Jest
- Added Jest configuration for TypeScript support.
- Implemented setup and cleanup functions for test environment.
- Created comprehensive tests for user registration and login routes.
- Updated package.json to include test scripts and dependencies.
- Refactored main application entry point to support testing.
- Renamed userRoutes to authRoutes for clarity and consistency.
- Updated README with testing instructions.

--- a/backend_database/readme
+++ b/backend_database/readme
@@ -35,3 +35,8 @@ FOREIGN KEY (user_id) REFERENCES users(id) -- 👈 RELATIONSHIP!
 
 to override env variables:
 NODE_ENV=development PORT=3001 npm run dev
+
+Testing:
+npm test # Run all tests
+npm run test:watch # Watch mode
+npm run test:coverage # With coverage report
