--- a/backend_database/todo
+++ b/backend_database/todo
@@ -1,8 +1,9 @@
+-ADD 2FA
 -Add Oauth for github ✅
--ADD 2FA 
 -Protect routes
 -Protect websocket connection
-- udate cgame logic for actual win conditions and add scores and scroe condtitsion adn win condition
+
+- udate game logic for actual win conditions and add scores and scroe condtitsion adn win condition
 
 -update routes and DB manipulation:
 
