--- a/backend_database/todo
+++ b/backend_database/todo
@@ -2,6 +2,7 @@
 -Add Oauth for github ✅
 -Protect routes
 -Protect websocket connection
+-add validation schemas to new routes (oauth and 2factor auth and auth)
 
 - udate game logic for actual win conditions and add scores and scroe condtitsion adn win condition
 
