--- a/backend_database/todo
+++ b/backend_database/todo
@@ -16,7 +16,10 @@
 
 -Add Oauth for github ✅
 
--Protect routes
+-unFuck Oauth Mockup tests
+
+-Protect more routes routes (figure what routes should be protected how)
+
 -Protect websocket connection
 
 -add validation schemas to new routes (oauth and 2factor auth and auth)
@@ -25,12 +28,12 @@
 
 -update routes and DB manipulation:
 
-? Users can securely subscribe to the website.
-? Registered users can securely log in.
-? Users can select a unique display name to participate in tournaments.
-? Users can update their information.
-? Users can upload an avatar, with a default option if none is provided.
-? Users can add others as friends and view their online status.
-? User profiles display stats, such as wins and losses.
-? Each user has a Match History including 1v1 games, dates, and relevant
-details, accessible to logged-in users.
+    ? Users can securely subscribe to the website.
+    ? Registered users can securely log in.
+    ? Users can select a unique display name to participate in tournaments.
+    ? Users can update their information.
+    ? Users can upload an avatar, with a default option if none is provided.
+    ? Users can add others as friends and view their online status.
+    ? User profiles display stats, such as wins and losses.
+    ? Each user has a Match History including 1v1 games, dates, and relevant
+    details, accessible to logged-in users.
