--- a/backend_database/todo
+++ b/backend_database/todo
@@ -1,9 +1,9 @@
--ADD 2FA✅ 
-    sub-todo for 2FA
-    ⚠️ Backup codes: If user loses phone, they're locked out forever
-    ⚠️ Password verification: Anyone with userId can disable 2FA currently
-    ⚠️ Rate limiting: No protection against brute-force token guessing (1/1,000,000 chance per attempt)
-    ⚠️ Login integration: 2FA setup exists but isn't enforced during actual login
+-ADD 2FA✅
+sub-todo for 2FA
+⚠️ Backup codes: If user loses phone, they're locked out forever
+⚠️ Password verification: Anyone with userId can disable 2FA currently
+⚠️ Rate limiting: No protection against brute-force token guessing (1/1,000,000 chance per attempt)
+⚠️ Login integration: 2FA setup exists but isn't enforced during actual login
 
     (optinal) add rate limiting
         Industry Best Practice for 2FA:
@@ -16,15 +16,15 @@
 
 -Add Oauth for github ✅
 
--unFuck Oauth Mockup tests
-
--Protect more routes routes (figure what routes should be protected how)
+-Protect more routes (figure what routes should be protected how)
 
 -Protect websocket connection
 
 -add validation schemas to new routes (oauth and 2factor auth and auth)
 
 -update game logic for actual win conditions and add scores and scroe condtitsion adn win condition
+
+-swagger api documentation
 
 -update routes and DB manipulation:
 
