--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -82,6 +82,7 @@
     "players8": "8 Players",
     "enterNames": "Enter Player Names",
     "startTournament": "Start Tournament",
+    "playerPlaceholder": "Player {{i}} name",
     "emptyNames": "All player names must be non-empty",
     "duplicateNames": "All player names must be unique",
     "setupFailed": "Tournament setup failed"
@@ -163,6 +164,9 @@
     "twoFactorHeading": "Two-Factor Authentication",
     "statusLabel": "Status:",
     "statusLoading": "Loading...",
+    "statusError": "Error loading status",
+    "enabled": "Enabled",
+    "disabled": "Disabled",
     "enableButton": "Enable Two-Factor Authentication",
     "disableInstructions": "Enter your 2FA code to disable 2FA:",
     "disableButton": "Disable Two-Factor Authentication",
@@ -173,7 +177,14 @@
     "setupStep2": "2. Enter the 6-digit code from your authenticator app to enable 2FA:",
     "enableModalButton": "Enable 2FA",
     "cancelButton": "Cancel",
-    "backToProfile": "Back to Profile"
+    "backToProfile": "Back to Profile",
+    "enter6Digit": "Please enter a 6-digit code",
+    "enter2faCode": "Please enter your 2FA code",
+    "secretCopied": "Secret copied to clipboard!"
+  },
+  "edit_success": {
+    "2fa_enabled": "Two-Factor Authentication enabled successfully!",
+    "2fa_disabled": "Two-Factor Authentication disabled successfully!"
   },
   "error": {
     "404": {
