--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -31,6 +31,13 @@
     "passwordPlaceholder": "Enter your password",
     "loginButton": "Log In",
     "registerButton": "Register",
+    "emailPasswordRequired": "Email and password are required.",
+    "loginFailed": "Login failed. Please check your credentials.",
+    "invalidEmail": "Invalid email address. Please check and try again.",
+    "invalidPassword": "Invalid password. Please check and try again.",
+    "invalid2FACode": "Invalid 2FA code. Please try again.",
+    "networkError": "Network error. Please check your connection.",
+    "2faVerificationFailed": "2FA verification failed. Please try again.",
     "twoFactorTitle": "Two-Factor Authentication",
     "twoFactorInstructions": "Enter the 6-digit code from your authenticator app",
     "authCodeLabel": "Authentication Code",
@@ -48,7 +55,16 @@
     "passwordPlaceholder": "Enter your password",
     "repeatPasswordLabel": "Repeat Password",
     "repeatPasswordPlaceholder": "Confirm your password",
-    "registerButton": "Register"
+    "registerButton": "Register",
+    "allFieldsRequired": "All fields are required.",
+    "registrationFailed": "Registration failed. Please try again.",
+    "emailExists": "This email is already registered. Please use a different email or log in.",
+    "usernameExists": "This username is already taken. Please choose a different one.",
+    "passwordsMismatch": "Passwords do not match. Please try again.",
+    "weakPassword": "Password is too weak. Please use a stronger password.",
+    "invalidEmailFormat": "Invalid email format. Please enter a valid email address.",
+    "invalidUsername": "Invalid username. Use 3-15 characters (letters, numbers, - and _ only).",
+    "networkError": "Network error. Please check your connection."
   },
 
   "pong": {
@@ -144,6 +160,7 @@
     "chattingWith": "Chatting with",
     "viewProfile": "View Profile",
     "viewProfileButton": "View Profile",
+    "startTitle": "Start Chat",
     "blockUser": "Block User",
     "blockSuccess": "User blocked successfully. You will no longer receive messages from this user.",
     "blockFailed": "Failed to block user. Please try again.",
@@ -158,9 +175,14 @@
     "avatarLabel": "Avatar",
     "chooseFile": "Choose File",
     "noFileChosen": "No file chosen",
+    "invalidAvatar": "Only JPEG and PNG files are allowed for avatars.",
     "emailLabel": "Email",
     "usernameLabel": "Nickname",
     "saveButton": "Save",
+    "emailUsernameRequired": "Email and username are required.",
+    "userIdNotFound": "User ID not found. Please log in again.",
+    "updateFailed": "Failed to update profile. Please try again.",
+    "networkError": "Network error",
     "twoFactorHeading": "Two-Factor Authentication",
     "statusLabel": "Status:",
     "statusLoading": "Loading...",
@@ -192,9 +214,15 @@
       "message": "The page you're looking for doesn't exist."
     },
     "sessionExpired": "Session expired. Please log in again.",
-    "invalidVerificationCode": "Invalid verification code",
-    "failed2FAEnable": "Failed to enable 2FA",
-    "failed2FADisable": "Failed to disable 2FA",
-    "failedCopySecret": "Failed to copy secret to clipboard"
+    "invalidVerificationCode": "Invalid verification code. Please try again.",
+    "failed2FAEnable": "Failed to enable 2FA. Please try again.",
+    "failed2FADisable": "Failed to disable 2FA. Please try again.",
+    "failedCopySecret": "Failed to copy secret to clipboard.",
+    "validationError": "Validation error. Please check your input.",
+    "notFound": "Resource not found.",
+    "conflict": "A conflict occurred. Please try again.",
+    "forbidden": "Access denied.",
+    "serverError": "Server error. Please try again later.",
+    "rateLimitExceeded": "Too many attempts. Please try again later."
   }
 }
