--- a/frontend/src/locales/ru.json
+++ b/frontend/src/locales/ru.json
@@ -81,7 +81,11 @@
     "instanceNotCreated": "Экземпляр Понга не создан.",
     "gameError": "Ошибка игры",
     "waitingForOpponent": "Ожидание соперника...",
-    "waitingForStart": "Нажмите «Начать игру», когда будете готовы"
+    "waitingForStart": "Нажмите Start Game, когда будете готовы",
+    "youWon": "🎉 Вы выиграли!",
+    "youLost": "😢 Вы проиграли!",
+    "gameOver": "Игра окончена",
+    "playerWins": "🎉 {{player}} выиграл!"
   },
 
   "pong_dynamic": {
@@ -150,7 +154,8 @@
     "cancelRequest": "Отменить запрос",
     "accept": "Принять",
     "decline": "Отклонить",
-    "addFriend": "Добавить в друзья"
+    "addFriend": "Добавить в друзья",
+    "requestDeclined": "Запрос в друзья отклонён"
   },
 
   "chat": {
