--- a/frontend/src/locales/de.json
+++ b/frontend/src/locales/de.json
@@ -81,7 +81,11 @@
     "instanceNotCreated": "Pong-Instanz nicht erstellt.",
     "gameError": "Spiel-Fehler",
     "waitingForOpponent": "Warten auf Gegner...",
-    "waitingForStart": "Wenn bereit, klicke Spiel starten"
+    "waitingForStart": "Wenn bereit, klicke Spiel starten",
+    "youWon": "🎉 Du hast gewonnen!",
+    "youLost": "😢 Du hast verloren!",
+    "gameOver": "Spiel vorbei",
+    "playerWins": "🎉 {{player}} gewinnt!"
   },
 
   "pong_dynamic": {
@@ -150,7 +154,8 @@
     "cancelRequest": "Anfrage abbrechen",
     "accept": "Akzeptieren",
     "decline": "Ablehnen",
-    "addFriend": "Freund hinzufügen"
+    "addFriend": "Freund hinzufügen",
+    "requestDeclined": "Freundschaftsanfrage abgelehnt"
   },
 
   "chat": {
